New colour system + colour theme for userpage

--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -235,7 +235,7 @@
   }
 
   &__status-text {
-    color: @yellow;
+    color: @osu-colour-u;
     font-size: @font-size--title-small-2;
     .@{top}__status--selected & {
       font-size: @font-size--title-small-3;
