--- a/resources/assets/less/bem/page-mode-link.less
+++ b/resources/assets/less/bem/page-mode-link.less
@@ -96,7 +96,7 @@
     height: 5px;
     transform: translateY(5px) scaleY(0);
     transition: transform 120ms ease-in-out;
-    background-color: @yellow;
+    background-color: @osu-colour-u;
 
     &--black {
       background-color: #000;
