--- a/resources/assets/less/bem/user-home-beatmapset.less
+++ b/resources/assets/less/bem/user-home-beatmapset.less
@@ -39,7 +39,7 @@
   }
 
   &:hover {
-    background-color: lighten(#333, 10%);
+    background-color: @osu-colour-b2;
     color: #fff;
   }
 
@@ -81,7 +81,7 @@
   }
 
   &__playcount {
-    color: @yellow;
+    color: @osu-colour-l2;
   }
 
   &__title {
