--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -155,6 +155,29 @@
 @greycarmine-dark: #302a2b;
 @greycarmine-darker: #241d1e;
 
+// osu!palette 2019v2-final-copy-last-FINAL
+:root {
+  --base-hue: 333; // default hue is osu! pink
+}
+@osu-colour-u: hsl(var(--base-hue), 100%, 70%);
+@osu-colour-p: hsl(var(--base-hue), 100%, 50%);
+@osu-colour-d: hsl(var(--base-hue), 50%, 45%);
+@osu-colour-l1: hsl(var(--base-hue), 40%, 70%);
+@osu-colour-l2: hsl(var(--base-hue), 40%, 60%);
+@osu-colour-l3: hsl(var(--base-hue), 40%, 50%);
+@osu-colour-d1: hsl(var(--base-hue), 20%, 35%);
+@osu-colour-d2: hsl(var(--base-hue), 20%, 30%);
+@osu-colour-d3: hsl(var(--base-hue), 20%, 25%);
+@osu-colour-d4: hsl(var(--base-hue), 20%, 20%);
+@osu-colour-d5: hsl(var(--base-hue), 20%, 15%);
+@osu-colour-d6: hsl(var(--base-hue), 20%, 10%);
+@osu-colour-b1: hsl(var(--base-hue), 10%, 40%);
+@osu-colour-b2: hsl(var(--base-hue), 10%, 30%);
+@osu-colour-b3: hsl(var(--base-hue), 10%, 25%);
+@osu-colour-b4: hsl(var(--base-hue), 10%, 20%);
+@osu-colour-b5: hsl(var(--base-hue), 10%, 15%);
+@osu-colour-b6: hsl(var(--base-hue), 10%, 10%);
+
 .colors(@name) {
   @lighter: "@{name}-lighter";
   @light: "@{name}-light";
