--- a/resources/assets/less/bem/page-mode.less
+++ b/resources/assets/less/bem/page-mode.less
@@ -20,7 +20,7 @@
   @_top: page-mode;
   @_gutter: 10px;
 
-  background-color: #333;
+  background-color: @osu-colour-b5;
   color: #ccc;
 
   display: block;
