Colour update for Modding Watchlist

--- a/resources/assets/less/bem/btn-circle.less
+++ b/resources/assets/less/bem/btn-circle.less
@@ -26,7 +26,7 @@
   text-shadow: inherit;
 
   flex: none;
-  background-color: @blue-darker;
+  background-color: @osu-colour-d;
   color: #fff;
   transition: all 120ms ease-in-out;
   font-size: 14px;
@@ -82,7 +82,7 @@
   }
 
   &--activated, &.js-activated {
-    background-color: @blue;
+    background-color: @osu-colour-u;
     color: #000;
 
     &:focus,
