--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -19,7 +19,7 @@
 .osu-layout {
   ._page {
     .default-box-shadow();
-    background-color: #fff;
+    background-color: @osu-colour-b5;
   }
 
   display: flex;
