Colour update for User Settings

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -148,7 +148,7 @@
     flex: 1;
     max-width: @input-width;
     align-self: stretch;
-    background-color: #444;
+    background-color: @osu-colour-b3;
     border: 2px solid transparent;
     color: #fff;
     font-weight: normal;
@@ -181,6 +181,7 @@
     padding-bottom: 5px;
     order: -1;
     font-weight: bold;
+    color: @osu-colour-l1;
 
     @media @desktop {
       align-self: center;
