--- a/resources/assets/less/bem/block-list-item.less
+++ b/resources/assets/less/bem/block-list-item.less
@@ -21,7 +21,7 @@
 
   display: flex;
   .default-border-radius();
-  background: #555;
+  background: @osu-colour-b2;
   align-items: center;
   justify-content: space-between;
   margin: 5px 0px;
@@ -29,7 +29,7 @@
   transition: 100ms ease-in-out;
 
   &:hover {
-    background: lighten(#555, 5%);
+    background: @osu-colour-b1;
   }
 
   &__link {
