--- a/resources/assets/less/bem/block-list.less
+++ b/resources/assets/less/bem/block-list.less
@@ -20,6 +20,11 @@
   align-self: flex-start;
   flex-grow: 1;
 
+  &__toggle {
+    color: @osu-colour-l1;
+    .link-hover({ color: white });
+  }
+
   &__content {
     max-width: 250px;
   }
