--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -26,8 +26,8 @@
 
   display: inline-block;
 
-  background-color: @blue-darker;
-  background-image: url('/images/backgrounds/buttonblue@2x.png');
+  background-color: @osu-colour-l2;
+  background-image: url('/images/backgrounds/button.svg');
   background-size: cover;
   background-position: 50% 50%;
   transition: background-position 120ms;
