--- a/resources/assets/less/bem/news-post-preview.less
+++ b/resources/assets/less/bem/news-post-preview.less
@@ -92,6 +92,7 @@
   &__post-title {
     display: block;
     color: white;
+    .link-hover({ color: white });
     font-size: @font-size--title-small;
     margin: 5px 0px 10px 0px;
     font-style: normal;
