--- a/resources/assets/less/bem/osu-checkbox.less
+++ b/resources/assets/less/bem/osu-checkbox.less
@@ -42,7 +42,7 @@
     background-color: #ccc;
 
     .@{_top}__input:checked ~ & {
-      background-color: @green;
+      background-color: @osu-colour-u;
     }
   }
 
