--- a/resources/assets/less/bem/user-session-list-session.less
+++ b/resources/assets/less/bem/user-session-list-session.less
@@ -28,10 +28,10 @@
   }
 
   &__current-badge {
-    background: #444;
+    background: @osu-colour-b3;
     padding: 2px 8px;
     border-radius: 13px;
-    color: #ccc;
+    color: @osu-colour-b1;
     font-size: 10px;
     text-transform: uppercase;
     margin-left: 5px;
