--- a/resources/assets/less/bem/btn-circle.less
+++ b/resources/assets/less/bem/btn-circle.less
@@ -26,7 +26,7 @@
   text-shadow: inherit;
 
   flex: none;
-  background-color: @osu-colour-d;
+  background-color: @osu-colour-l2;
   color: #fff;
   transition: all 120ms ease-in-out;
   font-size: 14px;
@@ -82,7 +82,7 @@
   }
 
   &--activated, &.js-activated {
-    background-color: @osu-colour-u;
+    background-color: @osu-colour-l1;
     color: #000;
 
     &:focus,
