--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -208,7 +208,7 @@
 
   &--users {
     .default-box-shadow();
-    background-color: @greyseafoam-dark;
+    background-color: @osu-colour-b4;
     color: #fff;
     margin-bottom: 10px;
   }
