--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -27,8 +27,8 @@
   .own-layer();
   .default-box-shadow();
   border-radius: @_border-radius;
-  background-color: #333;
-  color: #999;
+  background-color: @osu-colour-b5;
+  color: @osu-colour-d2;
   padding: @_padding-vertical @_gutter;
   display: flex;
   flex-direction: column;
