--- a/resources/assets/less/bem/update-streams-v2.less
+++ b/resources/assets/less/bem/update-streams-v2.less
@@ -19,15 +19,11 @@
 .update-streams-v2 {
   @_top: update-streams-v2;
   padding: 20px (@gutter - 5px);
-  background-color: @changelog-bg-extra;
+  background-color: @osu-colour-b5;
 
   @media @desktop {
     padding-left: (@gutter-desktop - 5px);
     padding-right: (@gutter-desktop - 5px);
-  }
-
-  &--user-list {
-    background-color: @greyseafoam-darker;
   }
 
   &__container {
