Colour update for Featured Artists

--- a/resources/assets/less/bem/page-contents.less
+++ b/resources/assets/less/bem/page-contents.less
@@ -30,7 +30,7 @@
 
   &--artist {
     flex-direction: column-reverse;
-    background-color: @gray-blue-dark;
+    background-color: @osu-colour-b5;
     @media @desktop {
       flex-direction: row;
       background: none;
