--- a/resources/assets/less/bem/artist-link-button.less
+++ b/resources/assets/less/bem/artist-link-button.less
@@ -40,7 +40,7 @@
   }
 
   align-items: center;
-  background: @gray-blue-darker;
+  background: @osu-colour-d6;
   border-radius: 4px;
   color: white;
   display: flex;
@@ -62,7 +62,7 @@
   }
 
   &:hover {
-    background: lighten(@gray-blue-darker, 2%);
+    background: @osu-colour-d5;
     .@{_top}__chevron {
       right: -5px;
     }
