--- a/resources/assets/less/bem/tracklist.less
+++ b/resources/assets/less/bem/tracklist.less
@@ -27,15 +27,15 @@
   }
 
   &__row {
-    background-color: @gray-blue-dark;
-    color: #8dacb6;
+    background-color: @osu-colour-b5;
+    color: @osu-colour-l2;
     font-weight: 100;
     font-size: 12px;
-    border-bottom: 2px solid @community-grayblue-page-background;
+    border-bottom: 2px solid @osu-colour-b6;
     transition: 0.1s;
 
     &:hover {
-      background-color: lighten(@gray-blue-dark, 2%);
+      background-color: @osu-colour-b4;
     }
 
     &--selected {
@@ -54,10 +54,10 @@
 
   &__row--header {
     text-transform: uppercase;
-    color: #8dacb6;
+    color: @osu-colour-l1;
     font-size: 10px;
     line-height: 32px;
-    background: #161A1C;
+    background: @osu-colour-b6;
   }
 
   &__col {
@@ -98,7 +98,7 @@
 
   &__preview {
     background-color: rgba(0,0,0,0.75);
-    color: rgba(255,255,255,0.33);
+    color: @osu-colour-d1;
     width: 32px;
     height: 32px;
     display: flex;
@@ -138,7 +138,7 @@
   }
 
   &__version {
-    color: #8dacb6;
+    color: @osu-colour-l2;
     font-size: 10px;
   }
 
@@ -166,7 +166,7 @@
       color: rgba(255, 255, 255, 0.33);
     }
     &--disabled {
-      color: @community-grayblue-page-background;
+      color: @osu-colour-b6;
     }
     &--shadowed {
       .default-text-shadow();
