Colour update for News Section

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -27,10 +27,7 @@
   display: inline-block;
 
   background-color: @osu-colour-l2;
-  background-image: url('/images/backgrounds/button.svg');
-  background-size: cover;
-  background-position: 50% 50%;
-  transition: background-position 120ms;
+  transition: background-color 120ms;
 
   padding: 5px;
   color: #fff;
@@ -41,28 +38,14 @@
   text-transform: none;
   white-space: nowrap;
 
-  &:focus {
-    color: #fff;
-    background-position: calc(50% - 10px) 50%;
-  }
-
-  &:hover {
-    color: #fff;
-    background-position: calc(50% - 20px) 50%;
-  }
-
+  &:focus,
+  &:hover,
   &:active {
     color: #fff;
-    background-position: calc(50% - 10px) 50%;
+    background-color: @osu-colour-l1;
   }
 
   &[disabled] {
-    &:hover,
-    &:focus,
-    &:active {
-      background-position: 50% 50%;
-    }
-
     &::before {
       .full-size();
       content: ' ';
@@ -93,10 +76,6 @@
     width: 45px;
     height: 45px;
     margin: 0 5px 5px 0;
-  }
-
-  &--beatmapset-header-square-unfavourite {
-    background-image: url('/images/backgrounds/buttonpink@2x.png');
   }
 
   &--comment-editor {
