--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -25,13 +25,15 @@
   align-self: center;
   text-align: center;
   font-size: @font-size--normal;
-  color: @link-color;
+  color: white;
   padding: 5px 20px;
   border-radius: 10000px;
-  color: inherit;
+
+  background-color: @osu-colour-b4;
 
   &:hover {
     color: inherit;
+    background-color: @osu-colour-b3;
   };
 
   &--beatmapsets {
@@ -52,72 +54,15 @@
 
   &--notification-group {
     font-size: @font-size--small;
-    color: @greysky-light;
   }
 
   &--profile-page {
     margin: 10px auto 0;
   }
 
-  &--t-greyseafoam-dark {
-    background-color: @greyseafoam-dark;
-
-    &:hover {
-      background-color: @greyseafoam;
-    };
-  }
-
-  &--t-dark-purple-dark {
-    background-color: @dark-purple-dark;
-
-    &:hover {
-      background-color: @dark-graypurple;
-    };
-  }
-
-  &--t-greyviolet-darker {
-    background-color: @greyviolet-darker;
-
-    &:hover {
-      background-color: #000;
-    };
-  }
-
-  &--t-ddd {
-    background-color: #ddd;
-
-    &:hover {
-      background-color: #ccc;
-    };
-  }
-
-  &--t-greysky {
-    background-color: @greysky;
-
-    &:hover {
-      background-color: @greysky-light;
-    };
-  }
-
   &[disabled], &.js-disabled {
-    color: #ccc;
-
-    &.@{_top}--t-greyseafoam-dark {
-      background-color: @greyseafoam-dark;
-    }
-
-    &.@{_top}--t-ddd {
-      background-color: #ddd;
-      color: #666;
-    }
-
-    &.@{_top}--t-dark-purple-dark {
-      background-color: @dark-purple-dark;
-    }
-
-    &.@{_top}--t-greyviolet-darker {
-      background-color: @greyviolet-darker;
-    }
+    color: @osu-colour-d1;
+    background-color: @osu-colour-b6;
   }
 
   &__spinner {
@@ -141,12 +86,8 @@
   }
 
   &__label-icon {
-    color: @yellow;
+    color: @osu-colour-u;
     margin: 0 5px;
-
-    .@{_top}--t-ddd & {
-      color: @yellow-dark;
-    }
 
     .@{_top}--notification-group & {
       color: #fff;
