--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -158,7 +158,7 @@
     .default-gutter();
     padding-bottom: 20px;
     padding-top: 20px;
-    background-color: @greyviolet-darker;
+    background-color: @osu-colour-b5;
     color: #fff;
     margin-bottom: 10px;
   }
