Colour update for Changelog

--- a/resources/assets/less/bem/builds.less
+++ b/resources/assets/less/bem/builds.less
@@ -20,7 +20,7 @@
   &__date {
     font-size: @font-size--title;
     font-weight: 300;
-    color: @yellow-light;
+    color: white;
     text-align: center;
     padding: 20px 0 0;
   }
