--- a/resources/assets/less/bem/changelog-entry.less
+++ b/resources/assets/less/bem/changelog-entry.less
@@ -40,10 +40,10 @@
   }
 
   &__link {
-    color: @blue-light;
+    color: @osu-colour-l1;
 
     &:hover {
-      color: @blue-lighter;
+      color: white;
     }
   }
 
@@ -53,7 +53,7 @@
     // having anything but markdown-formatted page inside may result in sadness.
     &--message {
       font-size: @font-size--normal;
-      color: @greyviolet-lighter;
+      color: @osu-colour-l2;
       margin-top: 2px;
 
       h1, h2, h3, h4, h5, h6 {
@@ -80,7 +80,7 @@
 
   &__title {
     &--major {
-      color: @yellow-light;
+      color: @osu-colour-u;
     }
   }
 
