--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -55,7 +55,7 @@
   }
 
   &--body-111-plain {
-    background-color: #111;
+    background-color: @osu-colour-b6;
 
     &::before {
       display: none;
