--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -29,11 +29,11 @@
   padding: 5px 20px;
   border-radius: 10000px;
 
-  background-color: @osu-colour-b4;
+  background-color: @osu-colour-b5;
 
   &:hover {
-    color: inherit;
-    background-color: @osu-colour-b3;
+    color: white;
+    background-color: @osu-colour-b6;
   };
 
   &--beatmapsets {
@@ -61,8 +61,8 @@
   }
 
   &[disabled], &.js-disabled {
-    color: @osu-colour-d1;
-    background-color: @osu-colour-b6;
+    color: @osu-colour-l1;
+    background-color: @osu-colour-b5;
   }
 
   &__spinner {
