--- a/resources/assets/less/functions.less
+++ b/resources/assets/less/functions.less
@@ -135,10 +135,10 @@
 }
 
 .link-default() {
-  color: @link-color;
+  color: @osu-colour-l1;
 
   .link-hover({
-    color: @link-hover-color;
+    color: white;
   });
 }
 
