Colour update for download page

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -90,7 +90,7 @@
     flex-direction: column;
     margin-bottom: 5px;
 
-    background-color: #333;
+    background-color: @osu-colour-b5;
 
     @media @desktop {
       .width-desktop(20px);
@@ -127,7 +127,7 @@
 
   &--header {
     .default-box-shadow();
-    background-color: #333;
+    background-color: @osu-colour-b5;
   }
 
   &--header-news, &--groups {
