--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -127,6 +127,8 @@
     background-image: url("/images/backgrounds/button.svg");
     background-color: @blue-darker;
     background-size: 150%;
+    background-position: 50% 50%;
+    transition: background-position 120ms;
 
     flex: none;
     height: 50px;
@@ -134,6 +136,13 @@
     margin-bottom: 20px;
 
     flex-direction: column;
+
+    &:focus,
+    &:hover,
+    &:active {
+      background-color: @blue-darker;
+      background-position: calc(50% - 20px) 50%;
+    }
   }
 
   &--mega {
