--- a/resources/assets/less/bem/paginator.less
+++ b/resources/assets/less/bem/paginator.less
@@ -33,33 +33,20 @@
     .center-content();
 
     .link-plain();
-    .link-white();
+    color: white;
+    .link-hover({ color: @osu-colour-l1 });
 
     &--current {
-      .link-yellow();
+      color: @osu-colour-l1;
+      .link-hover({ color: @osu-colour-l1 });
       font-weight: bold;
     }
 
     &--disabled {
-      color: #666;
+      color: @osu-colour-b6;
       .link-hover({
-        color: #666;
+        color: @osu-colour-b6;
       });
-    }
-
-    .beatmap-packs__pager & {
-      color: @gray-dark;
-
-      &--current {
-        color: @gray-darker;
-      }
-
-      &--disabled {
-        color: darken(@gray-lighter, 10%);
-        .link-hover({
-          color: darkern(@gray-lighter, 10%);
-        });
-      }
     }
   }
 }
