Colour update for Rankings

--- a/resources/assets/less/bem/page-mode-link.less
+++ b/resources/assets/less/bem/page-mode-link.less
@@ -99,7 +99,7 @@
     background-color: @osu-colour-u;
 
     &--black {
-      background-color: #000;
+      background-color: @osu-colour-b6;
     }
 
     .@{top}--post-reply & {
