--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -183,7 +183,7 @@
     .default-box-shadow();
     margin-bottom: 10px;
     padding: 15px 20px 0;
-    background-color: #333;
+    background-color: @osu-colour-b5;
   }
 
   &--small {
