Colour update for Chat

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -97,6 +97,11 @@
     border-radius: 10000px;
     padding: 10px;
 
+    background-color: @osu-colour-d;
+
+    &:hover {
+      background-color: @osu-colour-l3;
+    }
     @media @desktop {
       min-width: 130px;
       padding: 10px 20px;
