--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -71,7 +71,7 @@
   }
 
   &--body-community {
-    background-color: @community-blue-bg;
+    background-color: @osu-colour-b6;
 
     &::before {
       display: none;
