--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -235,7 +235,7 @@
 
   &--chat {
     .default-box-shadow();
-    background-color: @community-blue-darker;
+    background-color: @osu-colour-b5;
     color: @community-blue;
 
     flex: 1 0 auto;
