--- a/resources/assets/less/bem/chat-input.less
+++ b/resources/assets/less/bem/chat-input.less
@@ -23,7 +23,7 @@
   bottom: 0;
   text-align: right;
 
-  background: linear-gradient(to bottom, fade(@community-blue-dark, 0%), fade(@community-blue-dark, 95%) 40%, fade(@community-blue-dark, 95%) 100%);
+  background: linear-gradient(to bottom, .osu-hsla(@osu-colour-b4, 0)[@hsla], .osu-hsla(@osu-colour-b4, 0.95)[@hsla] 40%, .osu-hsla(@osu-colour-b4, 0.95)[@hsla] 100%);
   width: calc(100% - 20px); // this prevents the gradient drawing over the browser's scroll-bar
   height: 80px;
   padding-top: 10px;
@@ -42,10 +42,14 @@
     .default-border-radius();
     .default-box-shadow();
     width: 100%;
-    background: @community-blue-darkest;
+    background: @osu-colour-b6;
     padding: 10px;
     margin-right: 10px;
     font-family: @font-content;
+
+    &::placeholder {
+      color: @osu-colour-b1;
+    }
 
     &--disabled {
       opacity: 0.8;
