different listing display

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -25,6 +25,7 @@
 @import "bem/admin-menu-item";
 @import "bem/artist";
 @import "bem/artist-link-button";
+@import "bem/authorized-client";
 @import "bem/avatar";
 @import "bem/avatar-ribbon";
 @import "bem/back-to-top";
