Colour update for Contests

--- a/resources/assets/less/bem/contest-userentry-list.less
+++ b/resources/assets/less/bem/contest-userentry-list.less
@@ -19,7 +19,7 @@
 .contest-userentry-list {
   display: flex;
   flex-wrap: wrap;
-  background-color: @community-grayblue-page-background;
+  background-color: @osu-colour-b6;
   color: white;
   padding: 10px 10px 0;
   text-align: center;
