--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -286,6 +286,8 @@
 @comment-dark-border-bg: #222;
 @comment-dark-fg: #fff;
 
+@contest-selected-colour: #ffa500;
+
 @mod-width: 45px;
 @mod-height: 32px;
 
