--- a/resources/assets/less/bem/contest-voting-list.less
+++ b/resources/assets/less/bem/contest-voting-list.less
@@ -30,7 +30,7 @@
     align-items: center;
     flex: 0 0 32px;
     justify-content: center;
-    background: @community-grayblue-page-background;
+    background: @osu-colour-b6;
   }
 
   &__trophy {
@@ -46,30 +46,37 @@
   }
 
   &__row {
-    background-color: @gray-blue-dark;
-    color: #8dacb6;
+    background-color: @osu-colour-b5;
+    color: @osu-colour-l1;
     font-weight: 100;
     font-size: 12px;
-    border-bottom: 2px solid @community-grayblue-page-background;
+    border-bottom: 2px solid @osu-colour-b6;
     transition: 0.1s;
     display: flex;
 
     &:hover {
-      background-color: lighten(@gray-blue-dark, 2%);
+      background-color: @osu-colour-b3;
     }
 
     &--selected {
-      background-color: rgba(141, 172, 182, 0.25);
+      background-color: @osu-colour-b4;
+    }
+
+    &:first-child {
+      border-radius: @border-radius-base @border-radius-base 0 0;
+      overflow: hidden;
     }
 
     &:last-child {
       border-bottom: none;
+      border-radius: @border-radius-base @border-radius-base 0 0;
+      overflow: hidden;
     }
   }
 
   &__header {
     text-transform: uppercase;
-    color: #8dacb6;
+    color: @osu-colour-l1;
     font-size: 10px;
     line-height: 32px;
     display: flex;
@@ -125,25 +132,18 @@
   &__votes-bar {
     position: absolute;
     height: 100%;
-    background-color: #3F4E51;
+    background-color: @osu-colour-b3;
     top: 0;
     left: 0;
   }
 
   &__entrant {
-    color: #8dacb6;
+    .link-default();
     font-size: 10px;
   }
 
   &__link {
     .link-white();
     .link-plain();
-
-    &--contest-dl {
-      color: rgba(255, 255, 255, 0.33);
-    }
-    &--disabled {
-      color: @community-grayblue-page-background;
-    }
   }
 }
