Colour update for Tournaments

--- a/resources/assets/less/bem/tournament-list-item.less
+++ b/resources/assets/less/bem/tournament-list-item.less
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     margin: 5px;
-    background-color: @community-grayblue-tile-background;
+    background-color: @osu-colour-b4;
 
     .link-white();
     .link-plain();
@@ -36,7 +36,7 @@
           transform: scale(1.02);
         }
       }
-      background-color: lighten(@community-grayblue-tile-background, 5%);
+      background-color: @osu-colour-b3;
     }
 
     &--old {
@@ -71,7 +71,7 @@
     }
 
     &__registration-date {
-      color: @community-grayblue-text;
+      color: @osu-colour-l1;
       font-size: 12px;
 
       @media @mobile {
@@ -80,7 +80,7 @@
     }
 
     &__registrations {
-      color: @community-grayblue-text;
+      color: @osu-colour-l1;
       font-size: 15px;
 
       @media @mobile {
