Colour update for Livestreams

--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -91,7 +91,7 @@
   }
 
   &--live {
-    .at2x-simple("/images/headers/live-top.png");
+    .at2x-simple("/images/headers/live-top.jpg");
     height: 165px;
   }
 
@@ -251,6 +251,10 @@
     color: #fff;
 
     font-style: italic;
+
+    > a {
+      .link-default();
+    }
 
     @media @desktop {
       font-size: @font-size--header-title;
