Fix news background

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -158,6 +158,7 @@
     padding-bottom: 20px;
     padding-top: 20px;
     color: #fff;
+    background-color: @osu-colour-b4;
     margin-bottom: 10px;
   }
 
@@ -226,11 +227,6 @@
       padding-left: @padding-wiki-desktop;
       padding-right: @padding-wiki-desktop;
     }
-  }
-
-  // color overrides goes here
-  &--dark-bg {
-    background-color: #333;
   }
 
   &--chat {
