--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -218,7 +218,7 @@
 
   &--wiki {
     .inner-shadow-top();
-    background-color: #333;
+    background-color: @osu-colour-b4;
     color: #fff;
     font-size: @font-size--wiki;
     padding: 20px;
@@ -232,7 +232,6 @@
   &--chat {
     .default-box-shadow();
     background-color: @osu-colour-b5;
-    color: @community-blue;
 
     flex: 1 0 auto;
     display: flex;
