Colour update for popups/menus

--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -71,7 +71,7 @@
     .own-layer();
     will-change: transform, opacity;
     transition: none;
-    background-color: #222;
+    background-color: @osu-colour-b6;
     border-radius: @border-radius-large;
   }
 
