Tweak checkbox styling

--- a/resources/assets/less/bem/osu-checkbox.less
+++ b/resources/assets/less/bem/osu-checkbox.less
@@ -38,8 +38,8 @@
     .full-size();
     .default-border-radius();
     .default-box-shadow();
-    border: 2px solid #fff;
-    background-color: #ccc;
+    border: 1px solid @osu-colour-b2;
+    background-color: @osu-colour-b6;
 
     .@{_top}__input:checked ~ & {
       background-color: @osu-colour-u;
