Add override to Store pages to keep white background

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -130,6 +130,10 @@
     }
   }
 
+  &--store {
+    background-color: white !important;
+  }
+
   &__col {
     width: calc(100% - 10px);
     margin: 5px;
