Colour update for mobile nav bars/menus

--- a/resources/assets/less/bem/navbar-mobile.less
+++ b/resources/assets/less/bem/navbar-mobile.less
@@ -70,7 +70,7 @@
     position: fixed;
     top: @navbar-height;
     padding: 0 10px;
-    background-color: #444;
+    background-color: @osu-colour-b5;
     width: 100%;
     max-height: calc((var(--vh, 1vh) * 100) - @navbar-height);
     overflow-y: scroll;
