--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -63,7 +63,7 @@
   }
 
   &--body-222-plain {
-    background-color: #222;
+    background-color: @osu-colour-b6;
 
     &::before {
       display: none;
