Add override to the Multiplayer Match page to keep white background

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -259,6 +259,8 @@
     &--page-mp-history {
       ._page;
       padding: 20px;
+      margin-bottom: 10px;
+      background-color: white;
     }
 
     &--sm1 {
