--- a/resources/assets/less/bem/search.less
+++ b/resources/assets/less/bem/search.less
@@ -20,7 +20,7 @@
   .inner-shadow-top();
   .default-box-shadow();
   padding: 0 0 20px;
-  background-color: #222;
+  background-color: @osu-colour-b5;
   color: #fff;
   margin-bottom: 10px;
 }
