--- a/resources/assets/less/bem/search-result.less
+++ b/resources/assets/less/bem/search-result.less
@@ -20,7 +20,7 @@
   @top: search-result;
   .default-border-radius();
   .thicker-box-shadow();
-  background-color: #333;
+  background-color: @osu-colour-b4;
   padding: 10px 20px;
   padding-right: 0;
   margin-top: 20px;
