Colour update for notifications popup

--- a/resources/assets/less/bem/notification-popup.less
+++ b/resources/assets/less/bem/notification-popup.less
@@ -17,7 +17,7 @@
  */
 
 .notification-popup {
-  background-color: @greysky-darker;
+  background-color: @osu-colour-b4;
   color: #fff;
   padding: 10px 10px 15px; // to balance with type header's line height
   border-radius: @border-radius-large;
