--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -86,7 +86,7 @@
   }
 
   &__label-icon {
-    color: @osu-colour-u;
+    color: @osu-colour-l1;
     margin: 0 5px;
 
     .@{_top}--notification-group & {
