--- a/resources/assets/less/bem/notification-popup-item-group.less
+++ b/resources/assets/less/bem/notification-popup-item-group.less
@@ -18,7 +18,7 @@
 
 .notification-popup-item-group {
   @_top: notification-category-group;
-  background-color: @greysky;
+  background-color: @osu-colour-b5;
   border-radius: (@border-radius-large + 10px) (@border-radius-large + 10px) @border-radius-large @border-radius-large;
   display: flex;
   flex-direction: column;
