Tweak wiki page background colour

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -218,10 +218,11 @@
 
   &--wiki {
     .inner-shadow-top();
-    background-color: @osu-colour-b4;
+    background-color: @osu-colour-b5;
     color: #fff;
     font-size: @font-size--wiki;
     padding: 20px;
+    margin-bottom: 10px;
 
     @media @desktop {
       padding-left: @padding-wiki-desktop;
