Fix sorting headers on forum

--- a/resources/assets/less/bem/sort.less
+++ b/resources/assets/less/bem/sort.less
@@ -34,7 +34,7 @@
 
   &--forum-topics {
     padding: 10px 40px;
-    border-bottom: 1px solid #ddd;
+    background: @osu-colour-b5;
   }
 
   &--user-list {
