Update back-to-top button and pinned header for new colour scheme

--- a/resources/assets/less/sections.less
+++ b/resources/assets/less/sections.less
@@ -61,7 +61,7 @@
 
     .u-section--gradient-down {
       // the parts after 50% are for the header size transition.
-      background-image: linear-gradient(fade(@_bg, 90%) 0%, @_bg 37.5%, @_bg 50%, #222 50%, #222 100%);
+      background-image: linear-gradient(fade(@_bg, 90%) 0%, @_bg 37.5%, @_bg 50%, @osu-colour-b5 50%, @osu-colour-b5 100%);
       background-size: 200% 200%;
     }
   }
