--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -61,7 +61,7 @@
   }
 
   &[disabled], &.js-disabled {
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
     background-color: @osu-colour-b5;
   }
 
@@ -86,7 +86,7 @@
   }
 
   &__label-icon {
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
     margin: 0 5px;
 
     .@{_top}--notification-group & {
