Tweak dashboard colours

--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -240,7 +240,7 @@
   }
 
   &__status-text {
-    color: @osu-colour-u;
+    color: @osu-colour-l1;
     font-size: @font-size--title-small-2;
     .@{top}__status--selected & {
       font-size: @font-size--title-small-3;
