--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -245,6 +245,12 @@
       margin-bottom: 10px;
     }
 
+    &--page-watches {
+      ._page;
+      margin-bottom: 10px;
+      background-color: white;
+    }
+
     &--page-compact-no-margin {
       ._page;
     }
