Colour update for comment pages

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -59,14 +59,15 @@
 
   &--comment {
     .default-box-shadow();
-    background-color: @comment-dark-bg;
+    background-color: @osu-colour-b5;
     padding: 10px 0 0;
   }
 
   &--comments {
     .default-box-shadow();
-    background-color: @comment-dark-bg;
+    background-color: @osu-colour-b5;
     padding: 10px 0;
+    margin-bottom: 10px;
   }
 
   &--contest {
