--- a/resources/assets/less/bem/pagination-v0.less
+++ b/resources/assets/less/bem/pagination-v0.less
@@ -54,9 +54,10 @@
     }
 
     &--link {
-      .@{_top}--dark & {
-        .link-blue-light();
-      }
+      .link-default();
+      //.@{_top}--dark & {
+      //  .link-blue-light();
+      //}
     }
 
     &--separator {
