--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -281,9 +281,9 @@
 @changelog-fg: #fff;
 @changelog-fg-content: @pink-lighter;
 
-@comment-dark-bg: #333;
+@comment-dark-bg: @osu-colour-b5;
 @comment-dark-bg-extra: #222;
-@comment-dark-border-bg: #222;
+@comment-dark-border-bg: @osu-colour-b2;
 @comment-dark-fg: #fff;
 
 @contest-selected-colour: #ffa500;
