--- a/resources/assets/less/bem/beatmapsets-search.less
+++ b/resources/assets/less/bem/beatmapsets-search.less
@@ -99,7 +99,7 @@
 
     &:focus {
       outline: none;
-      border-color: @osu-colour-u;
+      border-color: @osu-colour-l1;
       box-shadow: 0 0 10px @osu-colour-l1;
     }
 
@@ -110,7 +110,7 @@
   }
 
   &__input-container {
-    color: @osu-colour-u;
+    color: @osu-colour-l1;
     font-size: @font-size--large;
     margin: 0 -10px;
     margin-top: 100px;
