Tweak header gradient to make text more legible

--- a/resources/assets/less/bem/header-v3.less
+++ b/resources/assets/less/bem/header-v3.less
@@ -84,7 +84,7 @@
     &::before {
       content: '';
       .full-size();
-      background-image: linear-gradient(to bottom, @osu-colour-b6, transparent);
+      background-image: linear-gradient(to bottom, @osu-colour-b6, transparent, @osu-colour-b6);
     }
 
     @media @desktop {
